--- a/sampledockerimg/pom.xml
+++ b/sampledockerimg/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.example</groupId>
-    <artifactId>sampledockerimg</artifactId>
+    <artifactId>sampledockerimgh</artifactId>
     <version>1.0-SNAPSHOT</version>
    <build>
        <finalName>sampledockerimg</finalName>
